log
Wed, May 14, 2025  8:20:11 AM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:13: error: implicit declaration of function 'addNode' [-Werror=implicit-function-declaration]
             addNode(list, new_node);
             ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
